--- a/pages/index.html
+++ b/pages/index.html
@@ -36,7 +36,7 @@
         </div>
         {% with messages = get_flashed_messages(with_categories=true) %}
           {% if messages %}
-            <div class="flash-messages">
+            <div class="flash-messages message-{{ category }}">
               {% for category, message in messages %}
                 <div class="alert alert-{{ category }}">{{ message }}</div>
               {% endfor %}
