--- a/pages/base.html
+++ b/pages/base.html
@@ -97,6 +97,7 @@
     <main>
         {% block content %}{% endblock %}
     </main>
+    <script src="{{ url_for('static', filename='js/preloader.js') }}"></script>
 
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
     <script src="{{ url_for('static', filename='js/gratitude.js') }}"></script>
