--- a/pages/global.html
+++ b/pages/global.html
@@ -12,7 +12,6 @@
 <section class="global">  
     <h1 class="globel-title">За що вдячен світ</h1>
 
-
     {% if gratitudes %}
         {% for gratitude in gratitudes %}
         <div class="global_gratitude">
@@ -27,6 +26,8 @@
                     {% if gratitude.image_url %}
                     <img src="{{ url_for('static', filename=gratitude.image_url) }}" class="gratitude_image" alt="Gratitude Image">
                     {% endif %}
+
+                    {% include '_gratitude_date.html' %}
                 </div>
             </div>
         </div>
